--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
-Package: remBoot
-Title: Random Encounter Modelling for Density Estimation and Variance
+Package: RandEM
+Title: Population density estimates via Random Encounter Models in R
 Version: 0.0.0.9000
-Authors@R: person("Anthony", "Caravaggi", email = "ar.caravaggi@gmail.com", role = c("aut", "cre"))
+Authors@R: c(
+person("Anthony", "Caravaggi", email = "ar.caravaggi@gmail.com", role = c("aut", "cre"),
+person("Tim C.D.", "Lucas", email = "timcdlucas@gmail.com", role = "aut"))
 Description: An implementation of the Random Encounter Model method of
-    estimating animal densities from camera trap data. It allows the researcher to
-    calculate REM estimates for a single survey site or a number of sites, along
-    with variance (SD and/or CI). See the help files for more information and examples.
+    estimating animal densities from camera trap data and the calculation of relevant parameters.
 Depends:
     R (>= 3.3.1)
 License: GPL-3
-URL: http://htmlpreview.github.io/?https://github.com/arcaravaggi/remBoot/blob/master/vignettes/remBoot.html 
-BugReports: https://github.com/arcaravaggi/remBoot/issues
+URL:  
+BugReports: https://github.com/arcaravaggi/RandEM/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
