--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: RandEM
-Title: Population density estimates via Random Encounter Models in R
-Version: 0.0.1.9000
+Title: Population density estimates via Random Encounter Models
+Version: 0.0.1.9001
 Authors@R: c(
-  person("Anthony", "Caravaggi", email = "ar.caravaggi@gmail.com", role = c("aut", "cre")),
-  person("Tim C.D.", "Lucas", email = "timcdlucas@gmail.com", role = "aut"))
-Description: An implementation of the Random Encounter Model method of
-    estimating animal densities from camera trap data and the calculation of relevant parameters.
-Depends:
+  person("Anthony", "Caravaggi", email = "ar.caravaggi@gmail.com", role = "aut"),
+  person("Tim C.D.", "Lucas", email = "timcdlucas@gmail.com", role = c("aut", "cre")),
+  person("Natoya", "Jourdain", email = "natoya.jourdain@hi.no", rote = c("aut"))
+Description: Random Encounter Models for estimating animal densities from camera trap 
+  and acoustic sensor data and the calculation of relevant parameters.
+Depends: MASS
 License: GPL-3
-URL: https://github.com/arcaravaggi/RandEM
-BugReports: https://github.com/arcaravaggi/RandEM/issues
+URL: https://github.com/timcdlucas/RandEM
+BugReports: https://github.com/timcdlucas/RandEM/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
