--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Authors@R: c(
   person("Natoya", "Jourdain", email = "natoya.jourdain@hi.no", role = "aut"))
 Description: Random Encounter Models for estimating animal densities from camera trap 
   and acoustic sensor data and the calculation of relevant parameters.
-Depends: MASS
+Depends: MASS,
+  gamlss.dist
 License: GPL-3
 URL: https://github.com/timcdlucas/RandEM
 BugReports: https://github.com/timcdlucas/RandEM/issues
@@ -15,7 +16,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Suggests: knitr,
-    rmarkdown,
-    testthat,
-	  ggplot2
+  rmarkdown,
+  testthat,
+	ggplot2
 VignetteBuilder: knitr
